test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-unmanaged-from-nonnil-owned.good
init-field-dflt-nonnil-unmanaged-from-nonnil-owned.chpl:8: error: Cannot initialize 'lhs' of type unmanaged MyClass from a 'owned MyClass'
